<resources>
    <string name="app_name">2 Urban Sisters</string>
    <string name="splash_text">Meet the 2 Urban Sisters</string>
    <string name="splash_sub_text">Make your order and have it come to YOU!!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_logout">Sign Out</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string name="activity_title_about_us">About Us</string>

    <!--      Dialog Strings      -->
    <string name="dialog_connection_title">Internet Connection Required!</string>
    <string name="dialog_connection_message">You need an active internet connection to proceed.</string>
    <string name="dialog_connection_btnOK">Retry</string>
    <string name="dialog_connection_btnNO">Close App</string>

    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="menu_home">Home</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_Settings">Settings</string>
    <string name="next_button">Next</string>


    /* BUTTONS
    <string name="previous_button">Next</string>
    <string name="skip_button">Skip</string>
    <string name="start_button">Get Started</string>
    <string name="login_button">Log In</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>

    <!-- Preference Titles -->
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>

    <!-- Messages Preferences -->
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>

    <!-- Sync Preferences -->
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="email_address_helper">Enter in the form name@example.com</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_prefix">+254</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="icon_description">Icon</string>
    <string name="or">or</string>
    <string name="access_account">Access Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="valid_email_error">Kindly enter a valid email address.</string>
    <string name="valid_short_password">Your password is too short. Ensure it has more than 6 characters.</string>
    <string name="valid_password_match">Your passwords do not match.</string>
    <string name="valid_required">This field is required.</string>
    <string name="loading_wait">Kindly be Patient :)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>
</resources>