<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.twourbansisters.app.RegisterActivity"
    android:background="@drawable/bg"
    android:gravity="center">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:padding="@dimen/activity_vertical_margin">
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/logo"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"/>

                <TextView
                    android:id="@+id/create_account"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/create_account"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    app:fontFamily="@font/croissant_one" />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    app:helperText="@string/email_address_helper"
                    app:startIconDrawable="@drawable/ic_baseline_alternate_email_24"
                    app:startIconContentDescription="@string/icon_description"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/email_name"
                        android:inputType="textEmailAddress"/>

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24"
                    app:startIconContentDescription="@string/icon_description"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/password_name"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/conf_password_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24"
                    app:startIconContentDescription="@string/icon_description"
                    app:endIconMode="password_toggle"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/conf_password_name"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:background="@drawable/get_started"
                    android:textColor="@android:color/white"
                    android:id="@+id/reg_create"
                    app:icon="@drawable/ic_baseline_person_add_24"
                    app:iconGravity="textStart" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>
                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_button"
                    android:background="@drawable/sign_in"
                    android:textColor="@color/colorPrimary"
                    android:id="@+id/reg_login"
                    style="?attr/borderlessButtonStyle"
                    app:icon="@drawable/ic_baseline_lock_open_24"
                    app:iconGravity="textStart"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>