<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:id="@+id/loginParent"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/login_layout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="@dimen/activity_vertical_margin">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/logo"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"/>

            <TextView
                android:id="@+id/login_account"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/access_account"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                app:fontFamily="@font/croissant_one" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                app:startIconDrawable="@drawable/ic_baseline_alternate_email_24"
                app:startIconContentDescription="@string/icon_description"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email_name"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:startIconContentDescription="@string/icon_description"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:endIconMode="password_toggle"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password_name"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/get_started"
                android:textColor="@android:color/white"
                android:text="@string/login_button"
                android:id="@+id/log_in"
                app:icon="@drawable/ic_baseline_lock_open_24"
                app:iconGravity="textStart"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">
                <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/create_account"
                    android:id="@+id/login_create"
                    android:background="@drawable/sign_in"
                    android:textColor="@color/colorPrimary"
                    style="?attr/borderlessButtonStyle"
                    app:icon="@drawable/ic_baseline_person_add_24"
                    app:iconGravity="textStart"/>
                <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/forgot_password"
                    android:id="@+id/login_reset"
                    app:icon="@drawable/ic_baseline_help_outline_24"
                    android:background="@android:color/holo_blue_bright"
                    android:textColor="@android:color/white"
                    app:iconGravity="textStart"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/reset_pw_layout"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="@dimen/activity_vertical_margin">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/logo"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"/>

            <TextView
                android:id="@+id/forgot_account"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/reset_password"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                app:fontFamily="@font/croissant_one" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/forgot_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                app:startIconDrawable="@drawable/ic_baseline_alternate_email_24"
                app:startIconContentDescription="@string/icon_description"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/forgot_name"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/get_started"
                android:textColor="@android:color/white"
                android:text="@string/reset_password"
                android:id="@+id/reset_pw"
                app:icon="@drawable/ic_baseline_help_outline_24"
                app:iconGravity="textStart"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">
                <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/create_account"
                    android:id="@+id/reset_create"
                    android:background="@drawable/sign_in"
                    android:textColor="@color/colorPrimary"
                    style="?attr/borderlessButtonStyle"
                    app:icon="@drawable/ic_baseline_person_add_24"
                    app:iconGravity="textStart"/>
                <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/login_button"
                    android:id="@+id/reset_login"
                    app:icon="@drawable/ic_baseline_lock_open_24"
                    android:textColor="@android:color/white"
                    app:iconGravity="textStart"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <include
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/loading_dialog"
        layout="@layout/loading" />
</RelativeLayout>